# city_simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  Car.drawio  Doxyfile  README.md  Untitled Diagram.drawio  goals  goals.txt  human.drawio  machine_flow_chart.drawio  trash.txt
drawio/: Diagram bez tytułu.drawio  Diagram_Class.drawio  Object_alone.drawio  diagram_class.drawio  machine_flow_chart.drawio  obiektyy  sekwencja.drawio
header/: Animal.hpp  Building.hpp  BuildingList.hpp  Cat.hpp  City.hpp  Dog.hpp  Draw.hpp  Entity.hpp  EnumList.hpp  Hospital.hpp  Human.hpp  Human2.hpp  Item.hpp  LiqourShop.hpp  Mapper.hpp  OfficeBuilding.hpp  Polytechnic.hpp  Shop.hpp  TileMap.hpp
resources/: config.csv  output.csv
src/: Animal.cpp  Building.cpp  Cat.cpp  City.cpp  Dog.cpp  Draw.cpp  Entity.cpp  Hospital.cpp  Human.cpp  Human2.cpp  Item.cpp  LiqourShop.cpp  OfficeBuilding.cpp  Polytechnic.cpp  Shop.cpp  TileMap.cpp  main.cpp
tests/: test_building.cpp  test_human.cpp
